[package]
name = "minecraft_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = "0.10.75"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
minecraft_protocol_derive = { path = "./minecraft_protocol_derive" }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }